File: plugins/nexus-blobstore-s3/pom.xml